--- a/.github/workflows/build-base-image.yaml
+++ b/.github/workflows/build-base-image.yaml
@@ -69,7 +69,9 @@ jobs:
           push: true
           pull: true
           no-cache: true
-          build-args: ${{ matrix.build_arg }}
+          build-args: |
+            ${{ matrix.build_arg }}
+            GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           tags: |
             ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}
             ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}
@@ -138,7 +140,9 @@ jobs:
           push: true
           pull: true
           no-cache: true
-          build-args: ${{ matrix.build_arg }}
+          build-args: |
+            ${{ matrix.build_arg }}
+            GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           tags: |
             ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}
             ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}
