--- a/base/Dockerfile.loong64
+++ b/base/Dockerfile.loong64
@@ -1,7 +1,6 @@
 FROM ghcr.io/loong64/alpine:edge
 
 ARG TARGETPLATFORM
-ARG GITHUB_TOKEN
 ARG INSTALL_FFMPEG=false
 ARG INSTALL_ARIA2=false
 LABEL MAINTAINER="OpenList"
@@ -22,7 +21,7 @@ RUN echo "🔍 Build args: INSTALL_FFMPEG=$INSTALL_FFMPEG, INSTALL_ARIA2=$INSTAL
         echo "📦 Installing Aria2..." && \
         apk add --no-cache curl aria2 && \
         mkdir -p /opt/aria2/.aria2 && \
-        curl -fsSL --retry 3 -H "Authorization: Bearer $GITHUB_TOKEN" https://github.com/P3TERX/aria2.conf/archive/refs/heads/master.tar.gz -O /tmp/aria-conf.tar.gz && \
+        curl -fsSL --retry 3 https://codeload.github.com/P3TERX/aria2.conf/tar.gz/refs/heads/master -o /tmp/aria-conf.tar.gz && \
         tar -zxvf /tmp/aria-conf.tar.gz -C /opt/aria2/.aria2 --strip-components=1 && rm -f /tmp/aria-conf.tar.gz && \
         sed -i 's|rpc-secret|#rpc-secret|g' /opt/aria2/.aria2/aria2.conf && \
         sed -i 's|/root/.aria2|/opt/aria2/.aria2|g' /opt/aria2/.aria2/aria2.conf && \
@@ -38,7 +37,7 @@ RUN echo "🔍 Build args: INSTALL_FFMPEG=$INSTALL_FFMPEG, INSTALL_ARIA2=$INSTAL
         echo 'exec svlogd /opt/openlist/data/log/aria2' >> /opt/service/stop/aria2/log/run && \
         chmod +x /opt/service/stop/aria2/run /opt/service/stop/aria2/log/run && \
         touch /opt/aria2/.aria2/aria2.session && \
-        /opt/aria2/.aria2/tracker.sh; \
+        (/opt/aria2/.aria2/tracker.sh || echo "⚠️  Tracker update failed, continuing..."); \
     else \
         echo "⏭️  Skipping Aria2 installation"; \
     fi && \
