--- a/base/Dockerfile.loong64
+++ b/base/Dockerfile.loong64
@@ -1,20 +1,27 @@
 FROM ghcr.io/loong64/alpine:edge
 
 ARG TARGETPLATFORM
-ARG GITHUB_TOKEN
 ARG INSTALL_FFMPEG=false
 ARG INSTALL_ARIA2=false
 LABEL MAINTAINER="OpenList"
 
 WORKDIR /opt/openlist/
 
-RUN apk update && \
+RUN echo "🔍 Build args: INSTALL_FFMPEG=$INSTALL_FFMPEG, INSTALL_ARIA2=$INSTALL_ARIA2" && \
+    apk update && \
     apk upgrade --no-cache && \
-    apk add --no-cache bash ca-certificates su-exec tzdata runit; \
-    [ "$INSTALL_FFMPEG" = "true" ] && apk add --no-cache ffmpeg; \
-    [ "$INSTALL_ARIA2" = "true" ] && apk add --no-cache curl aria2 && \
+    apk add --no-cache bash ca-certificates su-exec tzdata runit && \
+    if [ "$INSTALL_FFMPEG" = "true" ]; then \
+        echo "📦 Installing FFmpeg..." && \
+        apk add --no-cache ffmpeg; \
+    else \
+        echo "⏭️  Skipping FFmpeg installation"; \
+    fi && \
+    if [ "$INSTALL_ARIA2" = "true" ]; then \
+        echo "📦 Installing Aria2..." && \
+        apk add --no-cache curl aria2 && \
         mkdir -p /opt/aria2/.aria2 && \
-        curl -fsSL --retry 3 -H "Authorization: Bearer $GITHUB_TOKEN" https://github.com/P3TERX/aria2.conf/archive/refs/heads/master.tar.gz -O /tmp/aria-conf.tar.gz && \
+        curl -fsSL --retry 3 https://codeload.github.com/P3TERX/aria2.conf/tar.gz/refs/heads/master -o /tmp/aria-conf.tar.gz && \
         tar -zxvf /tmp/aria-conf.tar.gz -C /opt/aria2/.aria2 --strip-components=1 && rm -f /tmp/aria-conf.tar.gz && \
         sed -i 's|rpc-secret|#rpc-secret|g' /opt/aria2/.aria2/aria2.conf && \
         sed -i 's|/root/.aria2|/opt/aria2/.aria2|g' /opt/aria2/.aria2/aria2.conf && \
@@ -30,7 +37,10 @@ RUN apk update && \
         echo 'exec svlogd /opt/openlist/data/log/aria2' >> /opt/service/stop/aria2/log/run && \
         chmod +x /opt/service/stop/aria2/run /opt/service/stop/aria2/log/run && \
         touch /opt/aria2/.aria2/aria2.session && \
-        /opt/aria2/.aria2/tracker.sh ; \
+        (cd /opt/aria2/.aria2 && ./tracker.sh && echo "✅ Tracker update completed successfully" || echo "⚠️  Tracker update failed, continuing..."); \
+    else \
+        echo "⏭️  Skipping Aria2 installation"; \
+    fi && \
     rm -rf /var/cache/apk/*
     
 RUN mkdir -p /opt/service/start/openlist && \
