--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -5,10 +5,11 @@ on:
       image_name:
         description: 'Docker image name'
         required: false
-        default: 'openlist-base-image'
-  schedule:
-    - cron: '0 20 * * *' # 每天UTC时间20点，即北京时间4点
-
+        default: 'openlist-aria2'
+      aria2_version:
+        description: 'Aria2 version'
+        required: false
+        default: '1.37.0'
 env:
   IMAGE_NAME: ${{ github.event.inputs.image_name || 'openlist-base-image' }}
   DOCKERHUB_ORG_NAME: ${{ vars.DOCKERHUB_ORG_NAME || 'openlistteam' }}
@@ -16,6 +17,7 @@ env:
   GHCR_REGISTRY: ghcr.io
   RELEASE_PLATFORMS: 'linux/amd64,linux/arm64,linux/arm/v7,linux/386,linux/arm/v6,linux/ppc64le,linux/riscv64'
   LOONG64_PLATFORM: 'linux/loong64'
+  ARIA2_VERSION: ${{ github.event.inputs.aria2_version || '1.37.0' }}
 
 permissions:
   packages: write
@@ -25,18 +27,6 @@ jobs:
   build-base-image:
     name: Build Base Docker Image (Multi-arch)
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        image: ["base", "ffmpeg", "aria2", "aio"]
-        include:
-          - image: "base"
-            build_arg: ""
-          - image: "ffmpeg"
-            build_arg: "INSTALL_FFMPEG=true"
-          - image: "aria2"
-            build_arg: "INSTALL_ARIA2=true"
-          - image: "aio"
-            build_arg: "INSTALL_FFMPEG=true\nINSTALL_ARIA2=true"
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -64,12 +54,13 @@ jobs:
         uses: docker/build-push-action@v6
         id: build
         with:
-          context: ./base
-          file: ./base/Dockerfile
+          context: ./aria2
+          file: ./aria2/Dockerfile
           push: true
           pull: true
           no-cache: true
-          build-args: ${{ matrix.build_arg }}
+          build-args: |
+            ARIA2_VERSION=${{ env.ARIA2_VERSION }}
           tags: |
             ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}
             ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}
@@ -78,15 +69,15 @@ jobs:
 
       - name: Export digest
         run: |
-          mkdir -p ${{ runner.temp }}/digests-${{ matrix.image }}
+          mkdir -p ${{ runner.temp }}/digests
           digest="${{ steps.build.outputs.digest }}"
-          touch "${{ runner.temp }}/digests-${{ matrix.image }}/${digest#sha256:}"
+          touch "${{ runner.temp }}/digests/${digest#sha256:}"
 
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
-          name: digests-${{ matrix.image }}-multiarch
-          path: ${{ runner.temp }}/digests-${{ matrix.image }}/*
+          name: digests-multiarch
+          path: ${{ runner.temp }}/digests/*
           if-no-files-found: error
           retention-days: 1
 
@@ -94,18 +85,6 @@ jobs:
   build-loong64:
     name: Build Base Docker Image (LoongArch64)
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        image: ["base", "ffmpeg", "aria2", "aio"]
-        include:
-          - image: "base"
-            build_arg: ""
-          - image: "ffmpeg"
-            build_arg: "INSTALL_FFMPEG=true"
-          - image: "aria2"
-            build_arg: "INSTALL_ARIA2=true"
-          - image: "aio"
-            build_arg: "INSTALL_FFMPEG=true\nINSTALL_ARIA2=true"
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -133,12 +112,13 @@ jobs:
         uses: docker/build-push-action@v6
         id: build
         with:
-          context: ./base
-          file: ./base/Dockerfile.loong64
+          context: ./aria2
+          file: ./aria2/Dockerfile.loong64
           push: true
           pull: true
           no-cache: true
-          build-args: ${{ matrix.build_arg }}
+          build-args: |
+            ARIA2_VERSION=${{ env.ARIA2_VERSION }}
           tags: |
             ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}
             ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}
@@ -147,25 +127,22 @@ jobs:
 
       - name: Export digest
         run: |
-          mkdir -p ${{ runner.temp }}/digests-${{ matrix.image }}
+          mkdir -p ${{ runner.temp }}/digests
           digest="${{ steps.build.outputs.digest }}"
-          touch "${{ runner.temp }}/digests-${{ matrix.image }}/${digest#sha256:}"
+          touch "${{ runner.temp }}/digests/${digest#sha256:}"
 
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
-          name: digests-${{ matrix.image }}-loong64
-          path: ${{ runner.temp }}/digests-${{ matrix.image }}/*
+          name: digests-loong64
+          path: ${{ runner.temp }}/digests/*
           if-no-files-found: error
           retention-days: 1
 
   # 合并所有架构的manifest
   merge:
-    name: Merge ${{ matrix.image }} manifests
+    name: Merge  manifests
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        image: ["base", "ffmpeg", "aria2", "aio"]
     needs:
       - build-base-image
       - build-loong64
@@ -173,14 +150,14 @@ jobs:
       - name: Download digests (Multi-arch)
         uses: actions/download-artifact@v4
         with:
-          name: digests-${{ matrix.image }}-multiarch
-          path: ${{ runner.temp }}/digests-${{ matrix.image }}
+          name: digests-multiarch
+          path: ${{ runner.temp }}/digests
 
       - name: Download digests (LoongArch64)
         uses: actions/download-artifact@v4
         with:
-          name: digests-${{ matrix.image }}-loong64
-          path: ${{ runner.temp }}/digests-${{ matrix.image }}
+          name: digests-loong64
+          path: ${{ runner.temp }}/digests
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -199,26 +176,26 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Create manifest list and push
-        working-directory: ${{ runner.temp }}/digests-${{ matrix.image }}
+        working-directory: ${{ runner.temp }}/digests
         run: |
-          echo "🔍 Available digests for ${{ matrix.image }}:"
+          echo "🔍 Available digests :"
           ls -la
           
           # Create manifest for DockerHub
-          echo "📦 Creating DockerHub manifest for ${{ matrix.image }}..."
+          echo "📦 Creating DockerHub manifest ..."
           docker buildx imagetools create \
-            -t ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}:${{ matrix.image }} \
+            -t ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}: \
             $(printf '${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}@sha256:%s ' *)
           
           # Create manifest for GHCR
-          echo "📦 Creating GHCR manifest for ${{ matrix.image }}..."
+          echo "📦 Creating GHCR manifest for ..."
           docker buildx imagetools create \
-            -t ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}:${{ matrix.image }} \
+            -t ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}: \
             $(printf '${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}@sha256:%s ' *)
 
       - name: Inspect image
         run: |
           echo "🔍 Inspecting DockerHub image..."
-          docker buildx imagetools inspect ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}:${{ matrix.image }}
+          docker buildx imagetools inspect ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}:
           echo "🔍 Inspecting GHCR image..."
-          docker buildx imagetools inspect ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}:${{ matrix.image }}
+          docker buildx imagetools inspect ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}:
