refactor(aria2): 修改actions中参数的设置

--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -20,8 +20,8 @@ on:
         default: ''
 env:
   IMAGE_NAME: ${{ github.event.inputs.image_name || 'openlist-aria2' }}
-  DOCKERHUB_ORG_NAME: ${{ github.event.inputs.dockerhub_org_name || github.repository_owner }}
-  GHCR_ORG_NAME: ${{ github.event.inputs.ghcr_org_name || github.repository_owner }}
+  DOCKERHUB_ORG_NAME: ${{ github.event.inputs.dockerhub_org_name || vars.DOCKERHUB_ORG_NAME || github.repository_owner }}
+  GHCR_ORG_NAME: ${{ github.event.inputs.ghcr_org_name || vars.DOCKERHUB_ORG_NAME || github.repository_owner }}
   GHCR_REGISTRY: ghcr.io
   RELEASE_PLATFORMS: 'linux/amd64,linux/arm64,linux/arm/v7,linux/386,linux/arm/v6,linux/ppc64le,linux/riscv64'
   LOONG64_PLATFORM: 'linux/loong64'
