--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -105,11 +105,11 @@ jobs:
         run: |
           mkdir -p ${{ runner.temp }}/digests
           digest="${{ steps.build.outputs.digest }}"
-          echo "${digest}" > "${{ runner.temp }}/digests/${{ matrix.name }}-digest.txt"
+          touch "${{ runner.temp }}/digests/${digest#sha256:}"
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
-          name: digests-${{ matrix.name }}
+          name: digests
           path: ${{ runner.temp }}/digests/*
           if-no-files-found: error
           retention-days: 1
@@ -122,7 +122,6 @@ jobs:
       - name: Download all digests
         uses: actions/download-artifact@v4
         with:
-          pattern: digests-*
           path: ${{ runner.temp }}/digests
 
       - name: Login to GitHub Container Registry
@@ -147,7 +146,7 @@ jobs:
           echo "🔍 Available digests :"
           ls -la
           # Collect all digests for DockerHub
-          digests=$(find . -name '*-digest.txt' -exec cat {} \; | grep "${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}" | sed 's|^.*@||')
+          digests=$(find . -name 'digest-*' -exec cat {} \; | grep "${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}" | sed 's|^.*@||')
           refs=""
           for digest in $digests; do
             refs="$refs ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}@${digest}"
@@ -159,7 +158,7 @@ jobs:
       - name: Create manifest list and push (GHCR)
         working-directory: ${{ runner.temp }}/digests
         run: |
-          digests=$(find . -name '*-digest.txt' -exec cat {} \; | grep "${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}" | sed 's|^.*@||')
+          digests=$(find . -name 'digest-*' -exec cat {} \; | grep "${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}" | sed 's|^.*@||')
           refs=""
           for digest in $digests; do
             refs="$refs ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}@${digest}"
