refactor(aria2): 规范构建时的文件

--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -1,12 +1,12 @@
 ## 文件保存相关 ##
 # 文件的保存路径
-dir=/opt/aria2/downloads
+dir=/data/downloads
 daemon=false
 log-level=warn
-log=/opt/aria2/aria2.log
-netrc-path=/opt/aria2/aria2.netrc
-dht-file-path=/opt/aria2/aria2.dht
-dht-file-path6=/opt/aria2/aria2.dht6
+log=/data/aria2.log
+netrc-path=/data/aria2.netrc
+dht-file-path=/data/aria2.dht
+dht-file-path6=/data/aria2.dht6
 
 # 磁盘缓存
 disk-cache=64M
@@ -51,9 +51,9 @@ retry-wait=1
 
 ## 进度保存相关 ##
 # 从会话文件中读取下载任务
-input-file=/opt/aria2/aria2.session
+input-file=/data/aria2.session
 # 在Aria2退出时保存`错误/未完成`的下载任务到会话文件
-save-session=/opt/aria2/aria2.session
+save-session=/data/aria2.session
 # 定时保存会话, 0为退出时才保存
 save-session-interval=30
 
@@ -77,9 +77,9 @@ event-poll=epoll
 # 启用加密后 RPC 服务需要使用 https 或者 wss 协议连接
 # rpc-secure=false
 # 证书文件
-#rpc-certificate=/opt/aria2/aria2.crt
+#rpc-certificate=/data/aria2.crt
 # 私钥文件
-#rpc-private-key=/opt/aria2/aria2.key
+#rpc-private-key=/data/aria2.key
 
 ## BT/PT下载相关 ##
 # 当下载的是一个种子(以.torrent结尾)时, 自动开始BT任务, 默认:true
