refactor(aria2): change path

--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -140,15 +140,14 @@ jobs:
 
       - name: Export digest
         run: |
-          mkdir -p ${{ runner.temp }}/digests-${{ matrix.image }}
           digest="${{ steps.build.outputs.digest }}"
-          touch "${{ runner.temp }}/digests-${{ matrix.image }}/${digest#sha256:}"
+          touch "${{ runner.temp }}/${digest#sha256:}"
 
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
           name: digests-${{ matrix.name }}
-          path: ${{ runner.temp }}/digests-${{ matrix.image }}/*
+          path: ${{ runner.temp }}/*
           if-no-files-found: error
           retention-days: 1
 
