fix(aria2): change upload path

--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -140,14 +140,15 @@ jobs:
 
       - name: Export digest
         run: |
+          mkdir -p ${{ runner.temp }}/digests
           digest="${{ steps.build.outputs.digest }}"
-          touch "${{ runner.temp }}/${digest#sha256:}"
+          touch "${{ runner.temp }}/digests/${digest#sha256:}"
 
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
           name: digests-${{ matrix.name }}
-          path: ${{ runner.temp }}/*
+          path: ${{ runner.temp }}/digests/*
           if-no-files-found: error
           retention-days: 1
 
