fix(aria2): command err

--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -193,7 +193,7 @@ jobs:
             echo "🔍 Processing directory: $dir"
             if [ -d "$dir" ]; then
               echo "📦 Copying files without dir from $dir to ../digests-out/"
-              find "$dir" -type f -exec cp {} ${{ runner.temp }}/digests-out/ 
+              find "$dir" -type f -exec cp {} ${{ runner.temp }}/digests-out/ \;
             fi
           done
           cd ${{ runner.temp }}/digests-out
